feat: adding rbac and auth system
